# AppShift-MemoryPool

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CPPShift.h  MemoryPool.cpp  MemoryPool.h  MemoryPool.rar  MemoryPoolAllocator.h  MemoryPoolData.h  README.md  String.cpp  String.h  main.cpp
benchmarks/: STDString.cpp  STDString.h  String.cpp  String.h  main.cpp
implementation/execution/: EventLoop.cpp  ExecutionQueue.cpp  ThreadPool.cpp
implementation/stack/: common.cpp
include/: MemoryPool.h  PoolArchitectures.h
include/execution/: BusyFuture.h  BusyPromise.h  EventLoop.h  ExecutionQueue.h  FIFOQueue.h  ThreadPool.h
include/object/: ObjectPool.h
include/segregated/: SegregatedNTSPool.h  SegregatedTSLFPool.h  SegregatedTSLPool.h  common.h
include/stack/: StackNTSPool.h  StackTSLFPool.h  StackTSLPool.h  common.h
paper/: .gitignore  appshift_pool.bib  appshift_pool.tex
test/: CMakeLists.txt  STDString.cpp  STDString.h  String.cpp  String.h  main.cpp
tests/: CMakeLists.txt
tests/advanced_garbage_collection/: CMakeLists.txt
tests/fib_test/: CMakeLists.txt  main.cpp
tests/include/thread_pool/: thread_pool.h  thread_safe_queue.h
tests/matrix_mul_test/: CMakeLists.txt  main.cpp
tests/memory_pool_allocator/: main.cpp  test
tests/overriding_new_delete/: CMakeLists.txt  main.cpp
tests/performance_mode/: CMakeLists.txt
tests/same_size/: CMakeLists.txt  LinkedList.h  main.cpp
tests/simple_garbage_collection/: CMakeLists.txt
tests/thread_safety/: CMakeLists.txt
